# RedRob-AI-Candidate-Ranker

./: .env.example  .gitignore  AUDIT_LOG.md  AUDIT_REPORT.md  DEBUG_REPORT.md  EXECUTIVE_SUMMARY.md  NEXT_TASK.md  PROJECT_CONTEXT.md  PROJECT_STATUS.md  README.md  SETUP.md  TODO.md  audit_analysis.py  audit_script.py  consolidation_script.py  debug_skill_extraction.py  demo_feature_engineering.py  diagnostic_semantic.py  pyproject.toml  requirements.txt  test.py  test_candidate_direct.py  test_semantic_batch.py  test_semantic_similarity.py
backend/: README.md  requirements.txt
backend/app/: config.py  dependencies.py  main.py
backend/app/api/: analytics.py  candidate.py  dashboard.py  explainability.py  job_description.py  (+2 more)
docs/: ATOMIC_SKILL_EXTRACTION.md  DESIGN_DECISIONS.md  FEATURE_ENGINEERING.md  MILESTONE_2_COMPLETION.md  MILESTONE_3_4_COMPLETION.md  eda_report.md
frontend/: TODO.md  index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.jsx  styles.css
outputs/: ranked_candidates.parquet
outputs_backup/backup/: jd_features.json  jd_parser.py  tempCodeRunnerFile.py
outputs_backup_before_final_run/: evidence_store.json  feature_engineering_summary.json  jd_featues.py  jd_features_test.json  test_ranked_candidates.py
src/: __init__.py
src/data/: __init__.py  load_data.py
src/features/: __init__.py  candidate_feature_engine.py  feature_pipeline.py  jd_parser.py  semantic_similarity.py  temp_test.py
src/ranking/: __init__.py  feature_normalizer.py  hybrid_ranker.py  test.py
src/utils/: __init__.py  skill_extractor.py
(+48 files in other folders)
